# espilon-source

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md
.github/workflows/: discord-commits.yml
espilon_bot/: CMakeLists.txt  README.md  sdkconfig.defaults
espilon_bot/components/command/: CMakeLists.txt  command.c  command.h  command_async.c
espilon_bot/components/core/: CMakeLists.txt  WiFi.c  com.c  crypto.c  gprs.c  messages.c  process.c  utils.h
espilon_bot/components/core/nanoPB/: c2.pb.c  c2.pb.h
espilon_bot/components/mod_fakeAP/: CMakeLists.txt  cmd_fakeAP.c  cmd_fakeAP.h  fakeAP_utils.h  mod_fakeAP.c  mod_netsniff.c  mod_web_server.c
espilon_bot/components/mod_network/: CMakeLists.txt  cmd_network.c  cmd_network.h  mod_arp.c  mod_dos.c  mod_ping.c  mod_proxy.c  net_utils.h
espilon_bot/components/mod_recon/: CMakeLists.txt  cmd_recon.h  idf_component.yml  mod_cam.c  mod_trilat.c
espilon_bot/components/mod_system/: CMakeLists.txt  cmd_system.c  cmd_system.h
espilon_bot/main/: CMakeLists.txt  Kconfig  bot-lwip.c
tools/: README.md
tools/c2/: .env.example  README.md  c3po.py  requirements.txt  test_udp.py
tools/c2/camera/: __init__.py  config.py  server.py  udp_receiver.py  web_server.py
tools/c2/cli/: cli.py  help.py
tools/c2/commands/: base.py  reboot.py  registry.py
tools/c2/core/: crypto.py  device.py  groups.py  registry.py  transport.py
tools/c2/log/: __init__.py  manager.py
tools/c3po/: README.md  c3po.py  webserver.py
tools/flasher/: README.md  flash.py
tools/nanoPB/: c2.options  c2.proto
(+36 files in other folders)
